Added D3.js related SEO text in META description, and title

--- a/_posts/plotly_js/annotations/2015-04-09-annotations_plotly_js_index.html
+++ b/_posts/plotly_js/annotations/2015-04-09-annotations_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Text and Annotations | Examples | Plotly
+title: Javascript Graphing Library Text and Annotations with D3.js | Examples | Plotly
 name: Text and Annotations
 permalink: javascript/text-and-annotations/
-description: How to add text labels and annotations to plots in javascript.
+description: How to add text labels and annotations to plots in javascript with D3.js.
 layout: base
 thumbnail: thumbnail/annotations.jpg
 language: plotly_js
