--- a/_posts/plotly_js/area/2015-04-09-area_plotly_js_index.html
+++ b/_posts/plotly_js/area/2015-04-09-area_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Filled Area Plots | Examples | Plotly
+title: Javascript Graphing Library Filled Area Plots with D3.js | Examples | Plotly
 name: Filled Area Plots
 permalink: javascript/filled-area-plots/
-description: How to make a filled area plot in javascript. An area chart displays a solid color between the traces of a graph.
+description: How to make a filled area plot in javascript with D3.js. An area chart displays a solid color between the traces of a graph.
 layout: base
 thumbnail: thumbnail/area.jpg
 language: plotly_js
