--- a/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Bar Charts | Examples | Plotly
+title: Javascript Graphing Library Bar Charts with D3.js | Examples | Plotly
 name: Bar Charts
 permalink: javascript/bar-charts/
-description: How to make a bar chart in javascript. Seven examples of grouped, stacked, overlaid, and colored bar charts.
+description: How to make a bar chart in javascript with D3.js. Seven examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
 thumbnail: thumbnail/bar.jpg
 language: plotly_js
