--- a/_posts/plotly_js/bubble-maps/2015-07-11-bubble_maps_plotlyjs_index.html
+++ b/_posts/plotly_js/bubble-maps/2015-07-11-bubble_maps_plotlyjs_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Bubble Maps | Examples | Plotly
+title: Javascript Bubble Maps with D3.js | Examples | Plotly
 name: Bubble Maps
 permalink: javascript/bubble-maps/
-description: How to make a bubble map in JavaScript. A bubble map overlays a bubble chart on a map.
+description: How to make a bubble map in JavaScript. A bubble map overlays a bubble chart on a map with D3.js.
 layout: base
 thumbnail: thumbnail/bubble-map.jpg
 language: plotly_js
