--- a/_posts/plotly_js/callbacks-click/2015-04-09-click_index.html
+++ b/_posts/plotly_js/callbacks-click/2015-04-09-click_index.html
@@ -2,7 +2,7 @@
 title: Binding to Click Events in JavaScript Charts | Examples | Plotly
 name: Click Events
 permalink: javascript/click-events/
-description: How to bind callback functions to click events in JavaScript charts. 
+description: How to bind callback functions to click events in JavaScript charts with D3.js. 
 layout: base
 thumbnail: thumbnail/click.jpg
 language: plotly_js
