--- a/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
+++ b/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
@@ -1,8 +1,8 @@
 ---
-title: Zoom Events in JavaScript Charts | Examples | Plotly
+title: Zoom Events in JavaScript Charts with D3.js| Examples | Plotly
 name: Zoom Events
 permalink: javascript/zoom-events/
-description: How to bind callback functions to zoom events in JavaScript charts. 
+description: How to bind callback functions to zoom events in JavaScript charts with D3.js. 
 layout: base
 thumbnail: thumbnail/zoom.jpg
 language: plotly_js
