--- a/_posts/plotly_js/continuous-error-bars/2016-02-15-continuous-error-bar_plotly_js_index.html
+++ b/_posts/plotly_js/continuous-error-bars/2016-02-15-continuous-error-bar_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Continuous Error Bars | Examples | Plotly
+title: Continuous Error Bars with D3.js | Examples | Plotly
 name: Continuous Error Bars
 permalink: javascript/continuous-error-bars/
-description: How to add continuous error bars to a line, scatter, or bar chart.
+description: How to add continuous error bars to a line, scatter, or bar chart with D3.js.
 layout: base
 thumbnail: thumbnail/error-cont.jpg
 language: plotly_js
