--- a/_posts/plotly_js/font/2015-04-09-font_plotly_js_index.html
+++ b/_posts/plotly_js/font/2015-04-09-font_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Text and Font Styling | Examples | Plotly
+title: Javascript Graphing Library Text and Font Styling with D3.js | Examples | Plotly
 name: Text and Font Styling
 permalink: javascript/font/
-description: How to edit and style the font of graphs in javascript.
+description: How to edit and style the font of graphs in javascript with D3.js.
 layout: base
 thumbnail: thumbnail/font.jpg
 language: plotly_js
