--- a/_posts/plotly_js/gauge/2015-12-20-gauge-chart_plotly_js_index.html
+++ b/_posts/plotly_js/gauge/2015-12-20-gauge-chart_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: JavaScript Graphing Library Gauge Charts | Examples | Plotly
+title: JavaScript Graphing Library Gauge Charts with D3.js | Examples | Plotly
 name: Gauge Charts
 permalink: javascript/gauge-charts/
-description: How to make a circular gauge chart in javascript.
+description: How to make a circular gauge chart in javascript with D3.js.
 layout: base
 thumbnail: thumbnail/gauge.jpg
 language: plotly_js
