--- a/_posts/plotly_js/histogram/2015-04-09-histogram_plotly_js_index.html
+++ b/_posts/plotly_js/histogram/2015-04-09-histogram_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Histograms | Examples | Plotly
+title: Javascript Graphing Library Histograms with D3.js | Examples | Plotly
 name: Histograms
 permalink: javascript/histograms/
-description: How to make a histogram in JavaScript. Seven examples of colored, horizontal, and normal histogram bar charts.
+description: How to make a histogram in JavaScript with D3.js. Seven examples of colored, horizontal, and normal histogram bar charts.
 layout: base
 thumbnail: thumbnail/histogram.jpg
 language: plotly_js
