--- a/_posts/plotly_js/horizontal-bar/2015-04-09-horizontal_bar_plotlyjs_index.html
+++ b/_posts/plotly_js/horizontal-bar/2015-04-09-horizontal_bar_plotlyjs_index.html
@@ -1,8 +1,8 @@
 ---
-title: Plotly.js Horizontal Bar Charts | Examples | Plotly
+title: Plotly.js Horizontal Bar Charts with D3.js | Examples | Plotly
 name: Horizontal Bar Charts
 permalink: javascript/horizontal-bar-charts/
-description: How to make a hortizontal bar chart in JavaScript.
+description: How to make a hortizontal bar chart in JavaScript with D3.js.
 layout: base
 thumbnail: thumbnail/horizontal-bar.jpg
 language: plotly_js
