--- a/_posts/plotly_js/insets/2015-04-09-insets_plotly_js_index.html
+++ b/_posts/plotly_js/insets/2015-04-09-insets_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Inset Plots | Examples | Plotly
+title: Javascript Graphing Library Inset Plots with D3.js | Examples | Plotly
 name: Inset Plots
 permalink: javascript/insets/
-description: How to make an inset graph in javascript.
+description: How to make an inset graph in javascript with D3.js.
 layout: base
 thumbnail: thumbnail/insets.jpg
 language: plotly_js
