--- a/_posts/plotly_js/latex/2015-04-09-latex_plotly_js_index.html
+++ b/_posts/plotly_js/latex/2015-04-09-latex_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library LaTeX | Examples | Plotly
+title: Javascript Graphing Library LaTeX with D3.js | Examples | Plotly
 name: LaTeX
 permalink: javascript/LaTeX/
-description: How to add LaTeX to javascript graphs.
+description: How to add LaTeX to javascript graphs with D3.js.
 layout: base
 thumbnail: thumbnail/latex.jpg
 language: plotly_js
