--- a/_posts/plotly_js/lines-on-maps/2015-07-11-lines_on_maps_plotly_js_index.html
+++ b/_posts/plotly_js/lines-on-maps/2015-07-11-lines_on_maps_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Plotly.js Lines on Maps | Examples | Plotly
+title: Plotly.js Lines on Maps with D3.js | Examples | Plotly
 name: Lines on Maps
 permalink: javascript/lines-on-maps/
-description: How to draw lines, great circles, and contours on maps in JavaScript. Lines on maps can show distance between geographic points or be contour lines (isolines, isopleths, or isarithms).
+description: How to draw lines, great circles, and contours on maps in JavaScript with D3.js. Lines on maps can show distance between geographic points or be contour lines (isolines, isopleths, or isarithms).
 layout: base
 thumbnail: thumbnail/flight-paths.jpg
 language: plotly_js
