--- a/_posts/plotly_js/mixed/2015-04-09-mixed_plotly_js_index.html
+++ b/_posts/plotly_js/mixed/2015-04-09-mixed_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Mixed Chart Types | Examples | Plotly
+title: Javascript Graphing Library Mixed Chart Types with D3.js | Examples | Plotly
 name: Multiple Chart Types
 permalink: javascript/graphing-multiple-chart-types/
-description: How to makes figures with mixed chart types in JavaScript. Examples of a contour plot with a scatter plot and a bar chart with a line chart.
+description: How to makes figures with mixed chart types in JavaScript with D3.js. Examples of a contour plot with a scatter plot and a bar chart with a line chart.
 layout: base
 thumbnail: thumbnail/mixed.jpg
 language: plotly_js
