--- a/_posts/plotly_js/multiple-axes/2015-04-09-multiple-axes_plotly_js_index.html
+++ b/_posts/plotly_js/multiple-axes/2015-04-09-multiple-axes_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Multiple Axes | Examples | Plotly
+title: Javascript Graphing Library Multiple Axes with D3.js | Examples | Plotly
 name: Multiple Axes
 permalink: javascript/multiple-axes/
-description: How to make a graph with multiple axes in javascript.
+description: How to make a graph with multiple axes in javascript with D3.js.
 layout: base
 thumbnail: thumbnail/multiple-axes.jpg
 language: plotly_js
