--- a/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
+++ b/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
@@ -1,5 +1,5 @@
 ---
-title: Javascript Graphing Library OHLC Charts | Examples | Plotly
+title: Javascript Graphing Library OHLC Charts with D3.js | Examples | Plotly
 name: OHLC Charts
 permalink: javascript/ohlc-charts/
 description: How to graph OHLC charts in javascript. Examples of OHCL charts.
