--- a/_posts/plotly_js/polar/2015-04-09-polar_plotly_js_index.html
+++ b/_posts/plotly_js/polar/2015-04-09-polar_plotly_js_index.html
@@ -1,5 +1,5 @@
 ---
-title: Javascript Graphing Library Polar Charts | Examples | Plotly
+title: Javascript Graphing Library Polar Charts with D3.js | Examples | Plotly
 name: Polar Charts
 permalink: javascript/polar-chart/
 description: How to graph polar charts in javascript. Seven examples of polar line, polar scatter and polar area charts.
