--- a/_posts/plotly_js/shapes/2015-06-19-shape_plotlyjs_index.html
+++ b/_posts/plotly_js/shapes/2015-06-19-shape_plotlyjs_index.html
@@ -1,8 +1,8 @@
 ---
-title: JavaScript SVG Shapes | Examples | Plotly
+title: JavaScript SVG Shapes with D3.js | Examples | Plotly
 name: Shapes
 permalink: javascript/shapes/
-description: How to make arbitrary SVG shapes in JavaScript. Examples of lines, circle, rectangle, and path.
+description: How to make arbitrary SVG shapes in JavaScript with D3.js. Examples of lines, circle, rectangle, and path.
 layout: base
 thumbnail: thumbnail/shape.jpg
 language: plotly_js
