--- a/_posts/plotly_js/sizing/2015-04-09-sizing_plotly_js_index.html
+++ b/_posts/plotly_js/sizing/2015-04-09-sizing_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Setting Graph Size | Examples | Plotly
+title: Javascript Graphing Library Setting Graph Size with D3.js | Examples | Plotly
 name: Setting Graph Size
 permalink: javascript/setting-graph-size/
-description: How to change the size of graphs in javascript.
+description: How to change the size of graphs in javascript with D3.js.
 layout: base
 thumbnail: thumbnail/sizing.jpg
 language: plotly_js
