--- a/_posts/plotly_js/axes/2015-04-09-axes_plotly_js_index.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Axes | Examples | Plotly
+title: Javascript Graphing Library Axes with D3.js | Examples | Plotly
 name: Axes
 permalink: javascript/axes/
-description: How to adjust axes properties in javascript. Seven examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.
+description: How to adjust axes properties in javascript with D3.js. Seven examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.
 layout: base
 thumbnail: thumbnail/axes.jpg
 language: plotly_js
