--- a/_posts/plotly_js/bubble/2015-04-09-bubble_plotly_js_index.html
+++ b/_posts/plotly_js/bubble/2015-04-09-bubble_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Bubble Charts | Examples | Plotly
+title: Javascript Graphing Library Bubble Charts with D3.js| Examples | Plotly
 name: Bubble Charts
 permalink: javascript/bubble-charts/
-description: How to make a bubble chart in javascript. Examples of scatter charts whose markers have variable color, size, and symbols.
+description: How to make a bubble chart in javascript with D3.js. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
 thumbnail: thumbnail/bubble.jpg
 language: plotly_js
