--- a/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
+++ b/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
@@ -1,5 +1,5 @@
 ---
-title: Dropdowns in JavaScript Charts | Examples | Plotly
+title: Dropdowns in JavaScript Charts with D3.js | Examples | Plotly
 name: Dropdown Events
 permalink: javascript/high-dimension-data/
 description: How to bind callback functions to custom dropdowns in JavaScript charts.
