--- a/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
+++ b/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Candlestick Charts | Examples | Plotly
+title: Javascript Graphing Library Candlestick Charts with D3.js | Examples | Plotly
 name: Candlestick Charts
 permalink: javascript/candlestick-charts/
-description: How to graph candlestick charts in javascript. Examples of candlestick charts.
+description: How to graph candlestick charts in javascript with D3.js. Examples of candlestick charts.
 layout: base
 thumbnail: thumbnail/candlestick.jpg
 language: plotly_js
