--- a/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth_plotly_js_index.html
+++ b/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Choropleth Maps | Examples | Plotly
+title: Javascript Graphing Library Choropleth Maps with D3.js | Examples | Plotly
 name: Choropleth Maps
 permalink: javascript/choropleth-maps/
-description: How to make a choropleth map in JavaScript. A choropleth map shades geographic regions by value.
+description: How to make a choropleth map in JavaScript with D3.js. A choropleth map shades geographic regions by value.
 layout: base
 thumbnail: thumbnail/choropleth.jpg
 language: plotly_js
