--- a/_posts/plotly_js/hover/2015-10-08-hover_plotly_js_index.html
+++ b/_posts/plotly_js/hover/2015-10-08-hover_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Text and Annotations | Examples | Plotly
+title: Javascript Graphing Library Text and Annotations with D3.js | Examples | Plotly
 name: Hover Text and Formatting
 permalink: javascript/hover-text-and-formatting/
-description: How to add hover text and format hover values in javascript.
+description: How to add hover text and format hover values in javascript with D3.js.
 layout: base
 thumbnail: thumbnail/annotations.jpg
 language: plotly_js
