--- a/_posts/plotly_js/labels/2015-04-09-labels_plotly_js_index.html
+++ b/_posts/plotly_js/labels/2015-04-09-labels_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Setting the Title, Legend Entries, and Axis Titles | Examples | Plotly
+title: Javascript Graphing Library Setting the Title, Legend Entries, and Axis Titles  with D3.js| Examples | Plotly
 name: Setting the Title, Legend Entries, and Axis Titles
 permalink: javascript/figure-labels/
-description: How to set the title, legend-entries, and axis-titles in javascript.
+description: How to set the title, legend-entries, and axis-titles in javascript with D3.js.
 layout: base
 thumbnail: thumbnail/labels.jpg
 language: plotly_js
