--- a/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
+++ b/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
@@ -2,7 +2,7 @@
 title: Javascript Graphing Library Pie Charts | Examples | Plotly
 name: Pie Charts
 permalink: javascript/pie-chart/
-description: How to graph pie charts in javascript. Examples of pie charts, donut charts and pie chart subplots.
+description: How to graph pie charts in javascript with D3.js. Examples of pie charts, donut charts and pie chart subplots.
 layout: base
 thumbnail: thumbnail/pie-chart.jpg
 language: plotly_js
