--- a/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
+++ b/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
@@ -1,8 +1,8 @@
 ---
-title: Plotly.js Remove Trace from Plot | Examples | Plotly
+title: Plotly.js Remove Trace from Plot with D3.js | Examples | Plotly
 name: Remove Trace from Plot
 permalink: javascript/remove-trace/
-description: How to remove a trace from a plot in JavaScript.
+description: How to remove a trace from a plot in JavaScript with D3.js.
 layout: base
 thumbnail: thumbnail/remove-trace.jpg
 language: plotly_js
