--- a/_posts/plotly_js/subplots/2015-04-09-subplots_plotly_js_index.html
+++ b/_posts/plotly_js/subplots/2015-04-09-subplots_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Subplots | Examples | Plotly
+title: Javascript Graphing Library Subplots with D3.js | Examples | Plotly
 name: Subplots
 permalink: javascript/subplots/
-description: How to make subplots in javascript. Seven examples of stacked, custom-sized, and gridded subplots.
+description: How to make subplots in javascript with D3.js. Seven examples of stacked, custom-sized, and gridded subplots.
 layout: base
 thumbnail: thumbnail/subplots.jpg
 language: plotly_js
