--- a/_posts/plotly_js/time-series/2015-04-09-time-series_plotly_js_index.html
+++ b/_posts/plotly_js/time-series/2015-04-09-time-series_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Time Series | Examples | Plotly
+title: Javascript Graphing Library Time Series with D3.js | Examples | Plotly
 name: Time Series
 permalink: javascript/time-series/
-description: How to plot date and time in javascript. An example of a time-series plot.
+description: How to plot date and time in javascript with D3.js. An example of a time-series plot.
 layout: base
 thumbnail: thumbnail/time-series.jpg
 language: plotly_js
