--- a/_posts/matlab/bar/2015-04-09-stacked-bar.html
+++ b/_posts/matlab/bar/2015-04-09-stacked-bar.html
@@ -1,5 +1,5 @@
 ---
-name: Stacked Bar Chart
+name: Stacked Bar Chart with Labels
 plot_url: https://plot.ly/~PlotBot/38
 arrangement: horizontal
 language: matlab
