--- a/_posts/matplotlib/time-series/2016-02-12-mpl-bsaic-time-series.html
+++ b/_posts/matplotlib/time-series/2016-02-12-mpl-bsaic-time-series.html
@@ -7,19 +7,19 @@ suite: time-series
 order: 1
 sitemap: false
 ---
+import datetime
 import matplotlib.pyplot as plt
 import numpy as np
 
 import plotly.plotly as py
 import plotly.tools as tls
-# Learn about API authentication here: https://plot.ly/python/getting-started
-# Find your api_key here: https://plot.ly/settings/api
-
 
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
 
+# Learn about API authentication here: https://plot.ly/python/getting-started
+# Find your api_key here: https://plot.ly/settings/api
 
 x = np.array([datetime.datetime(2014, i, 9) for i in range(1,13)])
 y = np.random.randint(100, size=x.shape)
@@ -31,4 +31,3 @@ fig = plt.gcf()
 plotly_fig = tls.mpl_to_plotly( fig )
 
 plotly_url = py.plot(plotly_fig, filename='mpl-time-series')
-
