Minor Change in bar chart plot

--- a/_posts/matlab/bar/2015-04-09-basic-bar.html
+++ b/_posts/matlab/bar/2015-04-09-basic-bar.html
@@ -1,6 +1,6 @@
 ---
-name: Basic Bar Chart
-plot_url: https://plot.ly/~PlotBot/39
+name: Bar Chart with Custom Width
+plot_url: https://plot.ly/~tarzzz/
 arrangement: horizontal
 language: matlab
 suite: bar
