--- a/_posts/pandas/ipython-widgets/2015-06-30-pandas_ipython_widgets.html
+++ b/_posts/pandas/ipython-widgets/2015-06-30-pandas_ipython_widgets.html
@@ -18,7 +18,7 @@ order: 0
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Walking-through-Plotly-and-Pandas-and-IPython-Widgets">Walking through Plotly and Pandas and IPython Widgets<a class="anchor-link" href="#Walking-through-Plotly-and-Pandas-and-IPython-Widgets">&#182;</a></h2>
+<h2 id="Walking-through-Plotly-and-Pandas-and-IPython-Widgets">Walking through Plotly and Pandas<br /> and IPython Widgets<a class="anchor-link" href="#Walking-through-Plotly-and-Pandas-and-IPython-Widgets">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -407,7 +407,7 @@ Length: 183, dtype: int64</pre>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Update-the-graph-widget-with-the-most-common-counts-of-a-different-column">Update the graph widget with the most common counts of a different column<a class="anchor-link" href="#Update-the-graph-widget-with-the-most-common-counts-of-a-different-column">&#182;</a></h4><p>This update is done entirely in the client - <code>graph.restyle</code> sends data up to the browser client and communicates with the embedded Plotly graph</p>
+<h4 id="Update-the-graph-widget-with-the-most-common-counts-of-a-different-column">Update the graph widget with the most common<br /> counts of a different column<a class="anchor-link" href="#Update-the-graph-widget-with-the-most-common-counts-of-a-different-column">&#182;</a></h4><p>This update is done entirely in the client - <code>graph.restyle</code> sends data up to the browser client and communicates with the embedded Plotly graph</p>
 
 </div>
 </div>
