--- a/_posts/python/ipython-widgets/2015-06-30-plotly_widgets.html
+++ b/_posts/python/ipython-widgets/2015-06-30-plotly_widgets.html
@@ -13,6 +13,15 @@ page_type: example_index
 order: 0
 ---
 {% raw %}
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Walking-through-Plotly-and-Pandas-and-IPython-Widgets">Plotly and IPython Widgets<a class="anchor-link" href="#Walking-through-Plotly-and-Pandas-and-IPython-Widgets">&#182;</a></h2>
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[1]:</div>
