updated Jupyter tutorial

--- a/_posts/r/jupyter/2016-02-20-jupyter-notebook-r.html
+++ b/_posts/r/jupyter/2016-02-20-jupyter-notebook-r.html
@@ -1,5 +1,6 @@
 ---
-title: Plotly Charts in Jupyter notebooks using R
+title: Plotly Charts in Jupyter notebooks using R | Examples | Plotly
+name: Plotly Charts in Jupyter notebooks using R
 permalink: r/using-r-in-jupyter-notebooks
 description: How to embed plotly charts in Jupyter notebooks using R
 layout: user-guide
@@ -66,9 +67,9 @@ IRkernel::installspec()
 
 <img src="http://i.imgur.com/jTY3jCi.png" />
 
-<br><br>
+<hr>
 
-<h3>Plotly Examples</h3>
+<h3>Examples: </h3>
 <p>Here are some examples on how to use plotly inside of a Jupyter notebook.</p>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
