Added static image export page

--- a/_posts/matplotlib/axes/2016-02-22-axes_ticks.html
+++ b/_posts/matplotlib/axes/2016-02-22-axes_ticks.html
@@ -1,6 +1,6 @@
 ---
-name: Setting the XTICKS and YTicks Font and size
-plot_url: https://plot.ly/~tarzzz/1376
+name: Setting the XTICKS and YTicks Font size and angle
+plot_url: https://plot.ly/~tarzzz/1380
 arrangement: horizontal
 language: matplotlib
 suite: axes
@@ -31,12 +31,14 @@ plotly_fig = tls.mpl_to_plotly( mpl_fig )
 
 plotly_fig['layout']['xaxis1'].update({'ticktext': ['zero', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight'],
                                        'tickvals': [0, 1, 2, 3, 4, 5, 6, 7, 8],
-                                       'tickfont': {'size': 14, 'family':'Courier New, monospace'}
+                                       'tickfont': {'size': 14, 'family':'Courier New, monospace'},
+                                       'tickangle': 60
                                        })
 
 plotly_fig['layout']['yaxis1'].update({'ticktext': ['zero', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine'], 
 	                                   'tickvals': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],
-                                       'tickfont': {'size': 14, 'family':'Courier New, monospace'} 
+                                       'tickfont': {'size': 14, 'family':'Courier New, monospace'},
+                                       'tickangle': 60
 	                                   })
 
 plot_url = py.plot(plotly_fig, filename='mpl-custom-xticks-yticks')
