--- a/_posts/r/jupyter/2016-02-20-jupyter-notebook-r.html
+++ b/_posts/r/jupyter/2016-02-20-jupyter-notebook-r.html
@@ -1,8 +1,8 @@
 ---
 title: Plotly Charts in Jupyter notebooks using R | Examples | Plotly
 name: Plotly Charts in Jupyter notebooks using R
-permalink: r/using-r-in-jupyter-notebooks
-description: How to embed plotly charts in Jupyter notebooks using R
+permalink: r/using-r-in-jupyter-notebooks/
+description: How to embed Plotly charts in Jupyter notebooks using R
 layout: user-guide
 thumbnail: thumbnail/png-export.png
 language: r
@@ -19,7 +19,8 @@ sitemap: false
 <h3>Install python</h3><br>
 <p>The easiest route would be to either install:</p>
 <ul>
-<li><a href="http://conda.pydata.org/miniconda.html">Miniconda</a> if you'd like a barebones python distribution  </li>
+<li><a href="http://conda.pydata.org/miniconda.html">Miniconda</a> if you'd like a barebones python distribution
+</li>
 <li><a href="https://www.continuum.io/downloads">Anaconda</a> if you'd like a more comprehensive python installation</li>
 </ul>
 <p>Both of the above distributions include <code>conda</code> - a python package manager. We'll use <code>conda</code> to install <strong>Jupyter</strong> next.</p>
@@ -97,7 +98,7 @@ size <span class="o">&lt;-</span> <span class="kp">sample</span><span class="p">
 
 ds <span class="o">&lt;-</span> <span class="kt">data.frame</span><span class="p">(</span>x<span class="p">,</span> y<span class="p">,</span> group<span class="p">,</span> size<span class="p">)</span>
 
-p <span class="o">&lt;-</span> plot_ly<span class="p">(</span>ds<span class="p">,</span> x <span class="o">=</span> x<span class="p">,</span> y <span class="o">=</span> y<span class="p">,</span> mode <span class="o">=</span> <span class="s">&quot;markers&quot;</span><span class="p">,</span> group <span class="o">=</span> group<span class="p">,</span> size <span class="o">=</span> size<span class="p">)</span> <span class="o">%&gt;%</span> 
+p <span class="o">&lt;-</span> plot_ly<span class="p">(</span>ds<span class="p">,</span> x <span class="o">=</span> x<span class="p">,</span> y <span class="o">=</span> y<span class="p">,</span> mode <span class="o">=</span> <span class="s">&quot;markers&quot;</span><span class="p">,</span> group <span class="o">=</span> group<span class="p">,</span> size <span class="o">=</span> size<span class="p">)</span> <span class="o">%&gt;%</span>
   layout<span class="p">(</span>title <span class="o">=</span> <span class="s">&quot;Scatter plot in&quot;</span><span class="p">)</span>
 embed_notebook<span class="p">(</span>p<span class="p">)</span>
 </pre></div>
@@ -152,7 +153,7 @@ managers.df<span class="o">$</span>Dates <span class="o">&lt;-</span> index<span
 <span class="kp">head</span><span class="p">(</span>managers.df<span class="p">)</span>
 
 <span class="c1"># Plot</span>
-p <span class="o">&lt;-</span> plot_ly<span class="p">(</span>managers.df<span class="p">,</span> x <span class="o">=</span> Dates<span class="p">,</span> y <span class="o">=</span> HAM1<span class="p">,</span> type <span class="o">=</span> <span class="s">&quot;scatter&quot;</span><span class="p">,</span> mode <span class="o">=</span> <span class="s">&quot;lines&quot;</span><span class="p">,</span> name <span class="o">=</span> <span class="s">&quot;Manager 1&quot;</span><span class="p">,</span> fill <span class="o">=</span> <span class="s">&quot;tonexty&quot;</span><span class="p">)</span> <span class="o">%&gt;%</span> 
+p <span class="o">&lt;-</span> plot_ly<span class="p">(</span>managers.df<span class="p">,</span> x <span class="o">=</span> Dates<span class="p">,</span> y <span class="o">=</span> HAM1<span class="p">,</span> type <span class="o">=</span> <span class="s">&quot;scatter&quot;</span><span class="p">,</span> mode <span class="o">=</span> <span class="s">&quot;lines&quot;</span><span class="p">,</span> name <span class="o">=</span> <span class="s">&quot;Manager 1&quot;</span><span class="p">,</span> fill <span class="o">=</span> <span class="s">&quot;tonexty&quot;</span><span class="p">)</span> <span class="o">%&gt;%</span>
   layout<span class="p">(</span>title <span class="o">=</span> <span class="s">&quot;Time Series plot&quot;</span><span class="p">)</span>
 embed_notebook<span class="p">(</span>p<span class="p">)</span>
 </pre></div>
@@ -223,9 +224,9 @@ mine <span class="o">&lt;-</span> <span class="kp">as.matrix</span><span class="
 
 <span class="c1"># For rocks</span>
 p1 <span class="o">&lt;-</span> plot_ly<span class="p">(</span>z <span class="o">=</span> rock<span class="p">,</span> type <span class="o">=</span> <span class="s">&quot;heatmap&quot;</span><span class="p">,</span> showscale <span class="o">=</span> <span class="bp">F</span><span class="p">)</span>
-  
+
 <span class="c1"># For mines</span>
-p2 <span class="o">&lt;-</span> plot_ly<span class="p">(</span>z <span class="o">=</span> mine<span class="p">,</span> type <span class="o">=</span> <span class="s">&quot;heatmap&quot;</span><span class="p">,</span> name <span class="o">=</span> <span class="s">&quot;test&quot;</span><span class="p">)</span> <span class="o">%&gt;%</span> 
+p2 <span class="o">&lt;-</span> plot_ly<span class="p">(</span>z <span class="o">=</span> mine<span class="p">,</span> type <span class="o">=</span> <span class="s">&quot;heatmap&quot;</span><span class="p">,</span> name <span class="o">=</span> <span class="s">&quot;test&quot;</span><span class="p">)</span> <span class="o">%&gt;%</span>
   layout<span class="p">(</span>title <span class="o">=</span> <span class="s">&quot;Mine vs Rock&quot;</span><span class="p">)</span>
 
 <span class="c1"># Plot together</span>
