Updated jupyer example

--- a/_posts/r/jupyter/2016-02-20-jupyter-notebook-r.html
+++ b/_posts/r/jupyter/2016-02-20-jupyter-notebook-r.html
@@ -17,20 +17,10 @@ sitemap: false
 <p>This tutorial should help you get up and running with embedding Plotly charts inside a <a href="http://jupyter.org/">Jupyter</a> notebook using R</p>
 <hr>
 <h3>Install python</h3><br>
-<p>The easiest route would be to either install:</p>
-<ul>
-<li><a href="http://conda.pydata.org/miniconda.html">Miniconda</a> if you'd like a barebones python distribution
-</li>
-<li><a href="https://www.continuum.io/downloads">Anaconda</a> if you'd like a more comprehensive python installation</li>
-</ul>
-<p>Both of the above distributions include <code>conda</code> - a python package manager. We'll use <code>conda</code> to install <strong>Jupyter</strong> next.</p>
-<p>See <a href="https://www.continuum.io/blog/developer/jupyter-and-conda-r">link</a> for more details.</p>
+<p>Head on over to <a href = "https://www.python.org/downloads/" target= "_blank">https://www.python.org/downloads/</a>, download and install python.</p>
 <hr>
 <h3>Install Jupyter</h3>
 <p>Simply run the following command in your console:</p>
-<pre><code>conda install jupyter
-</pre><p></code></p><br>
-<p>You could use <code>pip</code> as well:</p>
 <pre><code>pip install jupyter
 </pre><p></code></p><br>
 <p>Use <code>pip3</code> for python 3.x. See <a href="http://jupyter.readthedocs.org/en/latest/install.html#existing-python-new-jupyter">here</a> for more  details.</p>
@@ -86,7 +76,7 @@ IRkernel::installspec()
 <div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-r"><pre><span class="c1"># Scatter plot</span>
+<div class=" highlight hl-r"><pre><span class="c1"># Scatter Plot</span>
 <span class="kn">library</span><span class="p">(</span>plotly<span class="p">)</span>
 
 <span class="kp">set.seed</span><span class="p">(</span><span class="m">123</span><span class="p">)</span>
@@ -99,7 +89,7 @@ size <span class="o">&lt;-</span> <span class="kp">sample</span><span class="p">
 ds <span class="o">&lt;-</span> <span class="kt">data.frame</span><span class="p">(</span>x<span class="p">,</span> y<span class="p">,</span> group<span class="p">,</span> size<span class="p">)</span>
 
 p <span class="o">&lt;-</span> plot_ly<span class="p">(</span>ds<span class="p">,</span> x <span class="o">=</span> x<span class="p">,</span> y <span class="o">=</span> y<span class="p">,</span> mode <span class="o">=</span> <span class="s">&quot;markers&quot;</span><span class="p">,</span> group <span class="o">=</span> group<span class="p">,</span> size <span class="o">=</span> size<span class="p">)</span> <span class="o">%&gt;%</span>
-  layout<span class="p">(</span>title <span class="o">=</span> <span class="s">&quot;Scatter plot in&quot;</span><span class="p">)</span>
+  layout<span class="p">(</span>title <span class="o">=</span> <span class="s">&quot;Scatter Plot&quot;</span><span class="p">)</span>
 embed_notebook<span class="p">(</span>p<span class="p">)</span>
 </pre></div>
 
@@ -114,7 +104,7 @@ embed_notebook<span class="p">(</span>p<span class="p">)</span>
 <div class="output_area"><div class="prompt"></div>
 
 <div class="output_html rendered_html output_subarea ">
-<iframe src="https://plot.ly/~RPlotBot/2837/scatter-plot-in/.embed" width="100%" height="400" id="igraph" scrolling="no" seamless="seamless" frameBorder="0"> </iframe>
+<iframe src="https://plot.ly/~RPlotBot/2851.embed" width="100%" height="400" id="igraph" scrolling="no" seamless="seamless" frameBorder="0"> </iframe>
 </div>
 
 </div>
@@ -128,7 +118,7 @@ embed_notebook<span class="p">(</span>p<span class="p">)</span>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Filled-line-chart">Filled line chart<a class="anchor-link" href="#Filled-line-chart">&#182;</a></h2><p>Apart from plots and figures, <em>tables</em> and <em>text output</em> can shown as well. Just like in <em>R-Markdown</em>.</p>
+<h2 id="Filled-line-chart">Filled Line Chart<a class="anchor-link" href="#Filled-line-chart">&#182;</a></h2><p>Apart from plots and figures, <em>tables</em> and <em>text output</em> can shown as well. Just like in <em>R-Markdown</em>.</p>
 
 </div>
 </div>
@@ -138,7 +128,7 @@ embed_notebook<span class="p">(</span>p<span class="p">)</span>
 <div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-r"><pre><span class="c1"># Filled line Chart</span>
+<div class=" highlight hl-r"><pre><span class="c1"># Filled Line Chart</span>
 <span class="kn">library</span><span class="p">(</span>plotly<span class="p">)</span>
 <span class="kn">library</span><span class="p">(</span>PerformanceAnalytics<span class="p">)</span>
 
@@ -202,7 +192,7 @@ embed_notebook<span class="p">(</span>p<span class="p">)</span>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Heat-map">Heat map<a class="anchor-link" href="#Heat-map">&#182;</a></h2>
+<h2 id="Heat-map">Heatmap<a class="anchor-link" href="#Heat-map">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -211,7 +201,7 @@ embed_notebook<span class="p">(</span>p<span class="p">)</span>
 <div class="prompt input_prompt">In&nbsp;[15]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-r"><pre><span class="c1"># Heat map</span>
+<div class=" highlight hl-r"><pre><span class="c1"># Heatmap</span>
 <span class="kn">library</span><span class="p">(</span>plotly<span class="p">)</span>
 <span class="kn">library</span><span class="p">(</span>mlbench<span class="p">)</span>
 
