Added more examples

--- a/_posts/matlab/axes/2015-04-09-axes-range-manual.html
+++ b/_posts/matlab/axes/2015-04-09-axes-range-manual.html
@@ -1,5 +1,5 @@
 ---
-name: Setting the Range of Axes Manually
+name: Setting the Range of Axes Manually ( Axis Scaling )
 plot_url: https://plot.ly/~PlotBot/9
 arrangement: horizontal
 language: matlab
