--- a/_posts/matlab/error-bar/2015-04-09-error-bar-horizontal.html
+++ b/_posts/matlab/error-bar/2015-04-09-error-bar-horizontal.html
@@ -1,23 +1,25 @@
 ---
-name: Horizontal Error Bars
-plot_url: https://plot.ly/~PlotBot/48
+name: Error Bars on Log Log Plot
+plot_url: https://plot.ly/~tarzzz/1464
 arrangement: horizontal
 language: matlab
 suite: error-bar
-order: 3
+order: 4
 sitemap: false
+description: Inspired from <a href="http://www.mathworks.com/matlabcentral/newsreader/view_thread/52022">Matlab Forum</a>
 ---
 % Learn about API authentication here: https://plot.ly/matlab/getting-started
 % Find your api_key here: https://plot.ly/settings/api
 
-data = {...
-  struct(...
-    'x', [1, 2, 3, 4], ...
-    'y', [2, 1, 3, 4], ...
-    'error_x', struct(...
-      'type', 'percent', ...
-      'value', 10), ...
-    'type', 'scatter')...
-};
-response = plotly(data, struct('filename', 'error-bar-horizontal', 'fileopt', 'overwrite'));
-plot_url = response.url
+x=[2,4,8, 16,32,64, 128,256, 300];
+y=[8.39365 3.4323 1.6234 1.447 0.7632 0.0984 0.05435 0.03455 0.1024];
+e=[0.3148 0.0450 0.0864 0.0511 0 0.0016 0.0026 0.0014 0.0060]
+line(x,y);
+title(' Error Bars on Log Log Plot');
+errorbar(x,y,e);
+
+set(gca,'xscale','log');
+set(gca,'yscale','log');
+
+response = fig2plotly;
+plotly_url = response.url;
