--- a/_posts/matlab/line_exclusive/2016-02-23-matlab-symbolic-equation-linear.html
+++ b/_posts/matlab/line_exclusive/2016-02-23-matlab-symbolic-equation-linear.html
@@ -6,7 +6,7 @@ language: matlab
 suite: line_exclusive
 order: 4
 sitemap: false
-description: Inspired from <a href="http://www.mathworks.com/matlabcentral/answers/44468-plotting-a-linear-equation"><a/>
+description: Inspired from <a href="http://www.mathworks.com/matlabcentral/answers/44468-plotting-a-linear-equation">Matlab Forum<a/>
 ---
 % Learn about API authentication here: https://plot.ly/matlab/getting-started
 % Find your api_key here: https://plot.ly/settings/api
