--- a/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
+++ b/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
@@ -1,8 +1,8 @@
 ---
-title: Dropdowns in JavaScript Charts with D3.js | Examples | Plotly
+title: Dropdowns in D3.js-based JavaScript Charts | Examples | Plotly
 name: Dropdown Events
 permalink: javascript/high-dimension-data/
-description: How to bind callback functions to custom dropdowns in JavaScript charts.
+description: How to bind callback functions to custom dropdowns in D3.js-based JavaScript charts.
 layout: base
 thumbnail: thumbnail/dropdown.jpg
 language: plotly_js
