--- a/_posts/plotly_js/callbacks-hover/2015-04-09-hover_index.html
+++ b/_posts/plotly_js/callbacks-hover/2015-04-09-hover_index.html
@@ -1,8 +1,8 @@
 ---
-title: Hover Events in JavaScript Charts with D3.js | Examples | Plotly
+title: Hover Events in D3.js-based JavaScript Charts | Examples | Plotly
 name: Hover Events
 permalink: javascript/hover-events/
-description: How to bind callback functions to hover events in JavaScript charts with D3.js. 
+description: How to bind callback functions to hover events in D3.js-based JavaScript charts.
 layout: base
 thumbnail: thumbnail/hover.jpg
 language: plotly_js
