--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar_plotly_js_index.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Error Bars with D3.js | Examples | Plotly
+title: Javascript Graphing Library D3.js-based Error Bars | Examples | Plotly
 name: Error Bars
 permalink: javascript/error-bars/
-description: How to add error bars to a line, scatter, or bar chart with D3.js. Seven examples of symmetric, asymmetric, horizontal, and colored error bars.
+description: How to add error bars to a D3.js-based line, scatter, or bar chart. Seven examples of symmetric, asymmetric, horizontal, and colored error bars.
 layout: base
 thumbnail: thumbnail/error-bar.jpg
 language: plotly_js
