--- a/_posts/plotly_js/histogram2d/2015-04-09-histogram2d_plotly_js_index.html
+++ b/_posts/plotly_js/histogram2d/2015-04-09-histogram2d_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library 2D Histograms with D3.js | Examples | Plotly
+title: Javascript Graphing Library D3.js-based 2D Histograms in Plotly.js| Examples | Plotly
 name: 2D Histograms
 permalink: javascript/2D-Histogram/
-description: How to make a 2D histogram in javascript with D3.js. A 2D histogram is a visualization of a bivariate distribution.
+description: How to make a D3.js-based 2D histogram in javascript. A 2D histogram is a visualization of a bivariate distribution.
 layout: base
 thumbnail: thumbnail/histogram2d.jpg
 language: plotly_js
