--- a/_posts/plotly_js/ribbon-plots/2015-08-12-ribbon-plot-index.html
+++ b/_posts/plotly_js/ribbon-plots/2015-08-12-ribbon-plot-index.html
@@ -1,8 +1,8 @@
 ---
-title: Ribbon Plots with D3.js | Examples | Plotly
+title: D3.js-based Ribbon Plots in Plotly.js| Examples | Plotly
 name: Ribbon Plots
 permalink: javascript/ribbon-plots/
-description: How to make a ribbon plot in JavaScript with D3.js.
+description: How to make a D3.js-based ribbon plot in JavaScript.
 layout: base
 thumbnail: thumbnail/ribbon-plot.jpg
 language: plotly_js
