--- a/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-scatter_maps_plotly_js_index.html
+++ b/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-scatter_maps_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Plotly.js Scatter Plots on Maps with D3.js | Examples | Plotly
+title: D3.js-based Scatter Plots on Maps in Plotly.js | Examples | Plotly
 name: Scatter Plots on Maps
 permalink: javascript/scatter-plots-on-maps/
-description: How to make scatter plots on maps in JavaScript with D3.js. Scatter plots on maps highlight geographic areas and can be colored by value.
+description: How to make D3.js-based scatter plots on maps in JavaScript. Scatter plots on maps highlight geographic areas and can be colored by value.
 layout: base
 thumbnail: thumbnail/scatter-plot-on-maps.jpg
 language: plotly_js
