--- a/_posts/plotly_js/treemaps/2015-11-30-treemaps_plotly_js_index.html
+++ b/_posts/plotly_js/treemaps/2015-11-30-treemaps_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Treemaps with D3.js | Examples | Plotly
+title:  D3.js-based Graphing Library Treemaps in Plotly.js | Examples | Plotly
 name: Treemaps
 permalink: javascript/treemaps/
-description: How to plot treemaps in javascript with D3.js. An example of a treemap plot.
+description: How to plot D3.js-based treemaps in Plotly.js. An example of a treemap plot.
 layout: base
 thumbnail: thumbnail/treemap.jpg
 language: plotly_js
