--- a/_posts/plotly_js/wind-rose/2015-04-09-wind-rose_plotlyjs_index.html
+++ b/_posts/plotly_js/wind-rose/2015-04-09-wind-rose_plotlyjs_index.html
@@ -1,8 +1,8 @@
 ---
-title: JavaScript Wind Rose Charts with D3.js | Examples | Plotly
+title: D3.js-based Wind Rose Charts in Plotly.js | Examples | Plotly
 name: Wind Rose Charts
 permalink: javascript/wind-rose-charts/
-description: How to graph wind rose charts in JavaScript with D3.js . 
+description: How to graph D3.js-based wind rose charts in plotly.js . 
 layout: base
 thumbnail: thumbnail/wind-rose.jpg
 language: plotly_js
