--- a/_posts/plotly_js/callbacks-buttons/2015-04-09-buttons_index.html
+++ b/_posts/plotly_js/callbacks-buttons/2015-04-09-buttons_index.html
@@ -1,8 +1,8 @@
 ---
-title: Custom Buttons in JavaScript Charts with D3.js | Examples | Plotly
+title: Custom Buttons in D3.js-based JavaScript Charts | Examples | Plotly
 name: Button Events
 permalink: javascript/custom-buttons/
-description: How to bind callback functions to custom buttons in JavaScript charts with D3.js. 
+description: How to bind callback functions to custom buttons in D3.js-based JavaScript charts. 
 layout: base
 thumbnail: thumbnail/custom-buttons.jpg
 language: plotly_js
