--- a/_posts/plotly_js/callbacks-sliders/2015-04-09-sliders_index.html
+++ b/_posts/plotly_js/callbacks-sliders/2015-04-09-sliders_index.html
@@ -1,8 +1,8 @@
 ---
-title: Sliders in JavaScript Charts with D3.js | Examples | Plotly
+title: Sliders in D3.js-based JavaScript Charts| Examples | Plotly
 name: Slider Events
 permalink: javascript/range-slider/
-description: How to bind callback functions to custom dropdowns in JavaScript charts with D3.js.
+description: How to bind callback functions to custom dropdowns in D3.js-based JavaScript charts.
 layout: base
 thumbnail: thumbnail/sliders.jpg
 language: plotly_js
