--- a/_posts/plotly_js/colorscales/2015-04-09-colorscales_plotlyjs_index.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-colorscales_plotlyjs_index.html
@@ -1,8 +1,8 @@
 ---
-title: Colorscales in JavaScript for contours and heatmaps with D3.js
+title: Colorscales in JavaScript for D3.js-based contours and heatmaps.
 name: Heatmap and Contour Colorscales
 permalink: javascript/heatmap-and-contour-colorscales/
-description: How to set colorscales and heatmap colorscales in JavaScript with D3.js and Plotly. Divergent, sequential, and qualitative colorscales.
+description: How to set colorscales and heatmap colorscales in D3.js-based JavaScript charts in Plotly.js. Divergent, sequential, and qualitative colorscales.
 layout: base
 thumbnail: thumbnail/colorbars.jpg
 language: plotly_js
