--- a/_posts/plotly_js/contour/2015-04-09-contour_plotly_js_index.html
+++ b/_posts/plotly_js/contour/2015-04-09-contour_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Contour Plots with D3.js | Examples | Plotly
+title: Javascript Graphing Library D3.js-based Contour Plots | Examples | Plotly
 name: Contour Plots
 permalink: javascript/contour-plots/
-description: How to make a contour plot in {{ page.language }} with D3.js. Examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
+description: How to make a D3.js-based contour plot in {{ page.language }}. Examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
 layout: base
 thumbnail: thumbnail/contour.jpg
 language: plotly_js
