--- a/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
+++ b/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
@@ -1,8 +1,8 @@
 ---
-title: JavaScript 2d Density Plots with D3.js | Examples | Plotly
+title: JavaScript D3.js-based 2d Density Plots | Examples | Plotly
 name: 2d Density Plots
 permalink: javascript/2d-density-plots/
-description: How to make a 2d density plot in JavaScript with D3.js. Examples of density plots with kernel density estimations, custom color-scales, and smoothing.
+description: How to make a D3.js-based 2d density plot in JavaScript. Examples of density plots with kernel density estimations, custom color-scales, and smoothing.
 layout: base
 thumbnail: thumbnail/2d-density-plot.jpg
 language: plotly_js
