--- a/_posts/plotly_js/heatmap/2015-04-09-heatmap_plotly_js_index.html
+++ b/_posts/plotly_js/heatmap/2015-04-09-heatmap_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Heatmaps with D3.js | Examples | Plotly
+title: Javascript D3.js-based Heatmaps| Examples | Plotly
 name: Heatmaps
 permalink: javascript/heatmaps/
-description: How to make a heatmap in javascript with a matrix with D3.js. Seven examples of colored and labeled heatmaps with custom colorscales.
+description: How to make a D3.js-based heatmap in javascript with a matrix. Seven examples of colored and labeled heatmaps with custom colorscales.
 layout: base
 thumbnail: thumbnail/heatmap.jpg
 language: plotly_js
