--- a/_posts/plotly_js/hover/2015-10-08-hover_plotly_js_index.html
+++ b/_posts/plotly_js/hover/2015-10-08-hover_plotly_js_index.html
@@ -1,9 +1,8 @@
 ---
-title: Javascript Graphing Library Text and Annotations with D3.js | Examples | Plotly
+title: D3.js-based Javascript Graphing Library Text and Annotations | Examples | Plotly
 name: Hover Text and Formatting
 permalink: javascript/hover-text-and-formatting/
-description: How to add hover text and format hover values in javascript with D3.js.
-layout: base
+description: How to add hover text and format hover values in D3.js-based javascript charts.
 thumbnail: thumbnail/annotations.jpg
 language: plotly_js
 page_type: example_index
