--- a/_posts/plotly_js/lasso/2016-01-27-lasso_plotly_js_index.html
+++ b/_posts/plotly_js/lasso/2016-01-27-lasso_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Lasso Selection in JavaScript Charts with D3.js | Examples | Plotly
+title: Lasso Selection in JavaScript D3.js-based Charts Examples | Plotly
 name: Lasso Selection
 permalink: javascript/lasso-selection/
-description: How to bind callback functions to lasso selection in JavaScript charts with D3.js.
+description: How to bind callback functions to lasso selection in JavaScript D3.js-based charts.
 layout: base
 thumbnail: thumbnail/lasso.jpg
 language: plotly_js
