--- a/_posts/plotly_js/legends/2015-04-09-legends_plotly_js_index.html
+++ b/_posts/plotly_js/legends/2015-04-09-legends_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Legends with D3.js | Examples | Plotly
+title: Javascript Graphing Library D3.js-based Legends | Examples | Plotly
 name: Legends
 permalink: javascript/legend/
-description: How to modify the legend in javascript graphs with D3.js. Seven examples of how to move, color, and hide the legend.
+description: How to modify the legend in D3.js-based javascript graphs. Seven examples of how to move, color, and hide the legend.
 layout: base
 thumbnail: thumbnail/legends.jpg
 language: plotly_js
