--- a/_posts/plotly_js/line-plots/2015-07-24-line-plots-index.html
+++ b/_posts/plotly_js/line-plots/2015-07-24-line-plots-index.html
@@ -1,8 +1,8 @@
 ---
-title: Plotly.js Line Charts with D3.js | Examples | Plotly
+title: D3.js-based Line Charts In Plotly.js  | Examples | Plotly
 name: Line Charts
 permalink: javascript/line-charts/
-description: How to make line charts in JavaScript with D3.js.
+description: How to make D3.js-based line charts in JavaScript.
 layout: base
 thumbnail: thumbnail/line-plots.jpg
 language: plotly_js
