--- a/_posts/plotly_js/polar/2015-04-09-polar_plotly_js_index.html
+++ b/_posts/plotly_js/polar/2015-04-09-polar_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
-title: Javascript Graphing Library Polar Charts with D3.js | Examples | Plotly
+title: Javascript Graphing Library D3.js-based Polar Charts | Examples | Plotly
 name: Polar Charts
 permalink: javascript/polar-chart/
-description: How to graph polar charts in javascript. Seven examples of polar line, polar scatter and polar area charts.
+description: How to graph D3.js-based polar charts in javascript. Seven examples of polar line, polar scatter and polar area charts.
 layout: base
 thumbnail: thumbnail/polar-scatter.jpg
 language: plotly_js
